# machine-learning-models

./: pyproject.toml
Projects/customer_churn/: customer_churn_model.py  data_exploration.py  utils.py
Pytorch/: pyproject.toml
Pytorch/data_compression_models/: autoencoder.py  train_ae.py  utils.py
Pytorch/data_compression_models/experiments/autoencoder_MNIST/: config_ae.py  train_ae.py  utils.py
Pytorch/data_compression_models/experiments/vae_MINST/: config_vae.py  train_vae.py  utils.py
Pytorch/data_compression_models/models/: autoencoder.py  variational_autoencoder.py
Pytorch/sequence_modeling/: explore.ipynb
Pytorch/sequence_modeling/experiments/: README.md
Pytorch/sequence_modeling/models/: mlp.py
Pytorch/sequence_modeling/utils/: sequence_encoding.py
