[tool.poetry]
name = "machine-learning-models"
version = "0.1.0"
description = ""
authors = ["eaguayo <esmeralda.aguayo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
graphviz = "^0.20.3"
ipython = "^8.22.2"
pydot = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
