[tool.poetry]
name = "machine-learning-models"
version = "0.1.0"
description = ""
authors = ["eaguayo <esmeralda.aguayo@gmail.com>"]
readme = "README.md"

# Add package-mode = false to disable package mode, to use Poetry only for dependency management but not for packaging
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
graphviz = "^0.20.3"
ipython = "^8.22.2"
pydot = "^2.0.0"
eli5 = "^0.13.0"
pdpbox = "^0.3.0"
shap = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
