[tool.poetry]
package-mode = false
name = "pytorch"
version = "0.1.0"
description = "pytorch showcase"
authors = ["eaguayo <esmeralda.aguayo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torchvision = "^0.17.1"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
